[package]
name = "tap-duel"
version = "0.1.0"
description = "Tap Duel - 1v1 tap battle game on Solana with MagicBlock Ephemeral Rollups"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tap_duel"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
ephemeral-rollups-sdk = { version = "0.6.5", features = ["anchor"] }
